Fix navbar overlapping the section header

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -21,6 +21,7 @@ $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+$section-size: 7.2rem;
 
 // Sizes
 $skill-circle-size: 2.2rem;
