--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -1,5 +1,5 @@
 .section {
-    padding: $l-size 0;
+    padding: $section-size 0;
 }
 
 .section--welcome {
